--- a/hobby2.html
+++ b/hobby2.html
@@ -43,9 +43,10 @@
                 他にも8月にSUPER BEAVERとTHE ORAL CIGARETTESの対バンライブが名古屋のライブハウスであるのでそれにも行こうかなと思っています。</p>
 
             <h3>関連情報</h3>
+            <p>一番好きなCreepy Nutsと今ハマっているORALのYoutubeのリンクを貼っておくので是非聞いてみてください！</p>
             <ul>
-                <li>△△に関するリンク</li>
-                <li>△△に関する参考文献</li>
+                <li><a href="https://www.youtube.com/@creepy_nuts">Creepy Nuts</a></li>
+                <li><a href="https://www.youtube.com/@THEORALCIGARETTES">THE ORAL CIGARETTES</a></li>
             </ul>
         </section>
         <footer>
