--- a/hobby2.html
+++ b/hobby2.html
@@ -41,6 +41,8 @@
                 <p>ここにあげたものは好きな順に並べましたが、正直全部同率くらい好きです。次点だとMY FIRST STORY、ONE OK ROCKなども好きです。<br>
                 一番最近行ったフェスだと、ゴールデンウイークに埼玉スーパーアリーナで開催していたVIVA LA ROCKに参戦しました。今後はひたちなかで開催するLucky Fesや千葉県で開催するROCK IN JAPANにも参戦予定です。
                 他にも8月にSUPER BEAVERとTHE ORAL CIGARETTESの対バンライブが名古屋のライブハウスであるのでそれにも行こうかなと思っています。</p>
+                <p>ROCK IN JAPANの開催地を載せておきます。</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6490.342141493339!2d140.1229314!3d35.5741692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60229b0b9c50b1c9%3A0xdcf05836c92a2aad!2z5Y2D6JGJ5biC6JiH5oiR44K544Od44O844OE5YWs5ZyS!5e0!3m2!1sja!2sjp!4v1747625221788!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
             <h3>関連情報</h3>
             <p>一番好きなCreepy Nutsと今ハマっているORALのYoutubeのリンクを貼っておくので是非聞いてみてください！</p>
